--- a/NewsRoom/Views/News/Add.cshtml
+++ b/NewsRoom/Views/News/Add.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div class="form-group">
         <label asp-for="Title"></label>
-        <input asp-for="Title" class="form-control" placeholder=""Ориент Експрес" пристига във Варна...">
+        <input asp-for="Title" class="form-control" placeholder="'Ориент Експрес' пристига във Варна...">
     </div>
     <div class="form-group">
         <label asp-for="Description"></label>
