--- a/NewsRoom/Views/News/Add.cshtml
+++ b/NewsRoom/Views/News/Add.cshtml
@@ -1,52 +1,49 @@
-﻿@model AddNewsFormModel 
+﻿@model AddNewsFormModel
 
-@{ 
+@{
     ViewData["Title"] = "Add News";
 }
 
-<form method="post">
-    <div class="form-group">
-        <label asp-for="Area"></label>
-        <input asp-for="Area" class="form-control" placeholder="Туризъм, Политика, Икономика и др...">
+<div class="row">
+    <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
+        <h2 class="heading-margin text-center">Add News</h2>
+        <form method="post">
+            <div class="form-group">
+                <label asp-for="Area"></label>
+                <input asp-for="Area" class="form-control" placeholder="Политика, Икономика, Туризъм и др...">
+            </div>
+            <div class="form-group">
+                <label asp-for="Title"></label>
+                <input asp-for="Title" class="form-control" placeholder="'Ориент Експрес' пристига във Варна...">
+            </div>
+            <div class="form-group">
+                <label asp-for="Description"></label>
+                <textarea asp-for="Description" rows="4" class="form-control" placeholder="Часът, в който ще пристигне влака е ..."></textarea>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageUrl"></label>
+                <input asp-for="ImageUrl" class="form-control" placeholder="Твоята снимка качи тук...">
+            </div>
+            <div class="form-group">
+                <label asp-for="Date"></label>
+                <input asp-for="Date" class="form-control" placeholder="@DateTime.UtcNow.Year">
+            </div>
+            <div class="form-group">
+                <label asp-for="CategoryId"></label>
+                <select asp-for="CategoryId" class="form-control">
+                    @foreach (var category in Model.Categories)
+                    {
+                        <option value="@category.Id">@category.Name</option>
+
+                    })
+                </select>
+            </div>
+
+            <input class="btn btn-primary" type="submit" value="Save" />
+        </form>
     </div>
-    <div class="form-group">
-        <label asp-for="Title"></label>
-        <input asp-for="Title" class="form-control" placeholder="'Ориент Експрес' пристига във Варна...">
-    </div>
-    <div class="form-group">
-        <label asp-for="Description"></label>
-        <textarea asp-for="Description" class="form-control" placeholder="Часът, в който ще пристигне влака е ..."></textarea>
-    </div>
-    <div class="form-group">
-        <label asp-for="ImageUrl"></label>
-        <input asp-for="ImageUrl" class="form-control" placeholder="Твоята снимка качи тук...">
-    </div>
-    <div class="form-group">
-        <label asp-for="Date"></label>
-        <input asp-for="Date" class="form-control" placeholder="@DateTime.UtcNow.Year">
-    </div>
-    <div class="form-group">
-        <label for="exampleFormControlSelect1">Example select</label>
-        <select class="form-control" id="exampleFormControlSelect1">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="exampleFormControlSelect2">Example multiple select</label>
-        <select multiple class="form-control" id="exampleFormControlSelect2">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="exampleFormControlTextarea1">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
-</form>
+
+</div>
+
+
+
