--- a/NewsRoom/Views/News/Add.cshtml
+++ b/NewsRoom/Views/News/Add.cshtml
@@ -11,6 +11,7 @@
             <div class="form-group">
                 <label asp-for="Area"></label>
                 <input asp-for="Area" class="form-control" placeholder="Политика, Икономика, Туризъм и др...">
+                <span asp-validation-for="Area" class="small text-danger" ></span>
             </div>
             <div class="form-group">
                 <label asp-for="Title"></label>
