--- a/NewsRoom/Views/Shared/_Layout.cshtml
+++ b/NewsRoom/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="Add">Add News</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="All">All News</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
