--- a/NewsRoom/Views/News/All.cshtml
+++ b/NewsRoom/Views/News/All.cshtml
@@ -2,16 +2,17 @@
 
 <div class="row">
     @{
-        foreach (var aNew in Model)
+        foreach (var aNews in Model)
         {
+        <div class="col-md-4">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                <img src="@aNews.ImageUrl" class="card-img-top" alt="@aNews.Area => @aNews.Title - @aNews.Date (@aNews.Category)">
+                <div class="card-body text-center">
+                    <h5 class="card-title text-center">@aNews.Area => @aNews.Title (@aNews.Date)</h5>
+                    <a asp-controller="News" asp-action="Details" asp-route-id="@aNews.Id" class="btn btn-primary">View More</a>
                 </div>
             </div>
+        </div>
 
 
         }
