--- a/NewsRoom/Views/Home/Index.cshtml
+++ b/NewsRoom/Views/Home/Index.cshtml
@@ -1,8 +1,71 @@
-﻿@{
+﻿@model List<NewsListingViewModel>
+@{
     ViewData["Title"] = "Welcome!";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@{
+    var firstNews = Model.Any() ? Model[0] : null;
+
+    var secondNews = Model.Count > 1 ? Model[1] : null;
+
+    var thirdNews = Model.Count > 2 ? Model[2] : null;
+
+}
+
+@if (!Model.Any())
+{
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome to the newest News!</h1>
+        <p class="lead">There are no News in the system currently available so why don't you just add one?</p>
+        <hr class="my-4">
+        <p class="lead">
+            <a asp-controller="News" asp-action="Add" class="btn btn-primary btn-lg" role="button">Add News</a>
+        </p>
+    </div>
+
+}
+
+
+
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        @if (firstNews != null)
+        {
+            <div class="carousel-item active">
+                <img src="@firstNews.ImageUrl" class="d-block w-100" alt="@firstNews.Area => @firstNews.Title">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5><a class="btn btn-primary" asp-controller="News" asp-action="Details" asp-route-id="@firstNews.Id">@firstNews.Area => @firstNews.Title</a></h5>
+                </div>
+            </div>
+        }
+
+        @if (secondNews != null)
+        {
+    <div class="carousel-item">
+        <img src="@secondNews.ImageUrl" class="d-block w-100" alt="@secondNews.Area => @secondNews.Title">
+        <div class="carousel-caption d-none d-md-block">
+            <h5><a class="btn btn-primary" asp-controller="News" asp-action="Details" asp-route-id="@secondNews.Id">@secondNews.Area => @secondNews.Title</a></h5>
+        </div>
+    </div>
+        }
+
+        @if (thirdNews != null)
+        {
+    <div class="carousel-item">
+        <img src="@thirdNews.ImageUrl" class="d-block w-100" alt="@thirdNews.Area => @thirdNews.Title">
+        <div class="carousel-caption d-none d-md-block">
+            <h5><a class="btn btn-primary" asp-controller="News" asp-action="Details" asp-route-id="@thirdNews.Id">@thirdNews.Area => @thirdNews.Title</a></h5>
+        </div>
+    </div>
+        }
+
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
