--- a/NewsRoom/Views/_ViewImports.cshtml
+++ b/NewsRoom/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using NewsRoom
 @using NewsRoom.Models
 @using NewsRoom.Models.News
+@using NewsRoom.Models.Home
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
