--- a/NewsRoom/Views/News/All.cshtml
+++ b/NewsRoom/Views/News/All.cshtml
@@ -5,7 +5,7 @@
         foreach (var aNews in Model)
         {
         <div class="col-md-4">
-            <div class="card">
+            <div class="card mb-3">
                 <img src="@aNews.ImageUrl" class="card-img-top" alt="@aNews.Area => @aNews.Title - @aNews.Date (@aNews.Category)">
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">@aNews.Area => @aNews.Title (@aNews.Date)</h5>
