--- a/NewsRoom/Views/News/All.cshtml
+++ b/NewsRoom/Views/News/All.cshtml
@@ -1,15 +1,22 @@
 ﻿@model AllNewsQueryModel
 
-<div>
-    <form method="get">
-        <div class="col-md-3">
-            <div class="form-group">
-                <label asp-for="SearchTerm"></label>
-                <input asp-for="SearchTerm" class="form-control" placeholder="Политика, Икономика, Туризъм и др...">
-            </div>
+<form method="get">
+    <div class="row mb-5">
+        <div class="form-group col-md-4">
+            <label asp-for="SearchTerm"></label>
+            <input asp-for="SearchTerm" class="form-control" placeholder="Днес във Варна пристига...">
         </div>
-    </form>
-</div>
+
+        <div class="form-group col-md-3">
+        </div>
+
+        <div class="form-group col-md-4">
+        </div>
+    </div>
+    <input type="submit" class="btn btn-primary d-none">
+
+</form>
+   
 
 <div class="row">
     @{
