--- a/NewsRoom/Views/News/All.cshtml
+++ b/NewsRoom/Views/News/All.cshtml
@@ -3,16 +3,17 @@
 <form method="get">
     <div class="row mb-5">
         <div class="form-group col-md-4">
-            <label asp-for="Area"></label>
-            <select asp-for="Area" class="form-control">
-                <option value="">All</option>
+            <div class="form-group">
+                <label asp-for="Area"></label>
+                <select asp-for="Area" class="form-control">
+                    <option value="">All</option>
 
-                @foreach (var area in Model.Areas)
-                {
-                    <option value="@area">@area</option>
-
-                })
-            </select>
+                    @foreach (var area in Model.Areas)
+                    {
+                        <option value="@area">@area</option>
+                    })
+                </select>
+            </div>
         </div>
         <div class="form-group col-md-4">
             <label asp-for="SearchTerm"></label>
@@ -20,13 +21,16 @@
         </div>
 
         <div class="form-group col-md-3">
-        </div>
-
-        <div class="form-group col-md-4">
+            <div class="form-group">
+                <label asp-for="Sorting"></label>
+                <select asp-for="Sorting" class="form-control">
+                    <option value="0" selected>Date Created</option>
+                    <option value="1">Date</option>
+                    <option value="2">Area And Title</option>
+                </select>
+            </div>
         </div>
     </div>
-    <input type="submit" class="btn btn-primary d-none">
-
 </form>
    
 
