--- a/NewsRoom/Views/News/All.cshtml
+++ b/NewsRoom/Views/News/All.cshtml
@@ -1,11 +1,11 @@
 ﻿@model AllNewsQueryModel
 
-@{ 
+@{
     ViewData["Title"] = "All News";
 }
 
 <form method="get">
-    <div class="row mb-5">
+    <div class="row">
         <div class="form-group col-md-4">
             <div class="form-group">
                 <label asp-for="Area"></label>
@@ -24,7 +24,7 @@
             <input asp-for="SearchTerm" class="form-control" placeholder="Днес във Варна пристига...">
         </div>
 
-        <div class="form-group col-md-3">
+        <div class="form-group col-md-4">
             <div class="form-group">
                 <label asp-for="Sorting"></label>
                 <select asp-for="Sorting" class="form-control">
@@ -36,34 +36,52 @@
         </div>
     </div>
 </form>
-   
+
+@{
+    var previousPage = Model.CurrentPage - 1;
+    if (previousPage < 1)
+    {
+        previousPage = 1;
+    }
+}
+
+
+<div class="row mb-5">
+    <div class="col-md-6">
+        <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
+           asp-controller="News"
+           asp-action="All"
+           asp-route-currentPage="@previousPage"><<</a>
+    </div>
+    <div class="col-md-6">
+        <a class="btn btn-primary float-right"
+           asp-controller="News"
+           asp-action="All"
+           asp-route-currentPage="@(Model.CurrentPage + 1)">>></a>
+    </div>
+
+</div>
+
+
 
 <div class="row">
     @{
         foreach (var aNews in Model.News)
         {
-        <div class="col-md-4">
-            <div class="card mb-3">
-                <img src="@aNews.ImageUrl" class="card-img-top" alt="@aNews.Area => @aNews.Title - @aNews.Date (@aNews.Category)">
-                <div class="card-body text-center">
-                    <h5 class="card-title text-center">@aNews.Area => @aNews.Title (@aNews.Date)</h5>
-                    <a asp-controller="News" asp-action="Details" asp-route-id="@aNews.Id" class="btn btn-primary">View More</a>
+            <div class="col-md-4">
+                <div class="card mb-3">
+                    <img src="@aNews.ImageUrl" class="card-img-top" alt="@aNews.Area => @aNews.Title - @aNews.Date (@aNews.Category)">
+                    <div class="card-body text-center">
+                        <h5 class="card-title text-center">@aNews.Area => @aNews.Title (@aNews.Date)</h5>
+                        <a asp-controller="News" asp-action="Details" asp-route-id="@aNews.Id" class="btn btn-primary">View More</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
         }
     }
 </div>
 
-<div class="row">
-    <div class="col-md-6">
-        <a asp-controller="News" asp-action="All" asp-route-currentPage="@(Model.CurrentPage - 1)"><<</a>
-    </div>
-    <div class="col-md-6">
-        <a asp-controller="News" asp-action="All" asp-route-currentPage="@(Model.CurrentPage + 1)">>></a>
-    </div>
 
-</div>
 
