--- a/NewsRoom/Views/News/All.cshtml
+++ b/NewsRoom/Views/News/All.cshtml
@@ -43,6 +43,8 @@
     {
         previousPage = 1;
     }
+
+    var maxPage = Math.Ceiling((double)Model.TotalNews / AllNewsQueryModel.NewsPerPage);
 }
 
 
@@ -54,7 +56,7 @@
            asp-route-currentPage="@previousPage"><<</a>
     </div>
     <div class="col-md-6">
-        <a class="btn btn-primary float-right"
+        <a class="btn btn-primary float-right @(Model.CurrentPage == maxPage ? "disabled" : string.Empty)"
            asp-controller="News"
            asp-action="All"
            asp-route-currentPage="@(Model.CurrentPage + 1)">>></a>
