--- a/NewsRoom/Views/News/All.cshtml
+++ b/NewsRoom/Views/News/All.cshtml
@@ -53,13 +53,19 @@
         <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
            asp-controller="News"
            asp-action="All"
-           asp-route-currentPage="@previousPage"><<</a>
+           asp-route-currentPage="@previousPage"
+           asp-route-area="@Model.Area"
+           asp-route-searchTerm="@Model.SearchTerm"
+           asp-route-sorting="@((int)Model.Sorting)"><<</a>
     </div>
     <div class="col-md-6">
         <a class="btn btn-primary float-right @(Model.CurrentPage == maxPage ? "disabled" : string.Empty)"
            asp-controller="News"
            asp-action="All"
-           asp-route-currentPage="@(Model.CurrentPage + 1)">>></a>
+           asp-route-currentPage="@(Model.CurrentPage + 1)"
+            asp-route-area="@Model.Area"
+           asp-route-searchTerm="@Model.SearchTerm"
+           asp-route-sorting="@((int)Model.Sorting)">>></a>
     </div>
 
 </div>
