--- a/NewsRoom/Views/_ViewImports.cshtml
+++ b/NewsRoom/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using NewsRoom.Models
 @using NewsRoom.Models.News
 @using NewsRoom.Models.Home
+@using NewsRoom.Models.Journalists
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
