changes names of placeholder in a Become view

--- a/NewsRoom/Views/Journalists/Become.cshtml
+++ b/NewsRoom/Views/Journalists/Become.cshtml
@@ -10,12 +10,12 @@
         <form method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
-                <input asp-for="Name" class="form-control" placeholder="Политика, Икономика, Туризъм и др...">
+                <input asp-for="Name" class="form-control" placeholder="Top News, Best News, etc...">
                 <span asp-validation-for="Name" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PhoneNumber"></label>
-                <input asp-for="PhoneNumber" class="form-control" placeholder="'Ориент Експрес' пристига във Варна...">
+                <input asp-for="PhoneNumber" class="form-control" placeholder="+359-888-888-888">
                 <span asp-validation-for="PhoneNumber" class="small text-danger"></span>
             </div>
           
