--- a/NewsRoom/Views/Journalists/Become.cshtml
+++ b/NewsRoom/Views/Journalists/Become.cshtml
@@ -19,7 +19,7 @@
                 <span asp-validation-for="PhoneNumber" class="small text-danger"></span>
             </div>
           
-            <input class="btn btn-primary" type="submit" value="Save" />
+            <input class="btn btn-primary mt-3" type="submit" value="Save" />
         </form>
     </div>
 
