change placeholder in Name of Become view

--- a/NewsRoom/Views/Journalists/Become.cshtml
+++ b/NewsRoom/Views/Journalists/Become.cshtml
@@ -10,7 +10,7 @@
         <form method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
-                <input asp-for="Name" class="form-control" placeholder="Top News, Best News, etc...">
+                <input asp-for="Name" class="form-control" placeholder="Ali Gorman, Genka Shikerova, etc...">
                 <span asp-validation-for="Name" class="small text-danger"></span>
             </div>
             <div class="form-group">
