try if JS workin with console.log

--- a/NewsRoom/Views/Home/Index.cshtml
+++ b/NewsRoom/Views/Home/Index.cshtml
@@ -87,3 +87,11 @@
         </h2>
     </div>
 </div>
+
+@section Scripts {
+<script>
+    $.get('/api/statistics', (data) => {
+        console.log('OK'); 
+    })
+</script>
+} 
