added AJAX request

--- a/NewsRoom/Views/Home/Index.cshtml
+++ b/NewsRoom/Views/Home/Index.cshtml
@@ -97,6 +97,7 @@
             $('#total-writers').text(data.totalWriters + " Writers");
 
             $('#statistics').removeClass('d-none');
+            $('#statistics-button').hide();
         })
     });
 </script>
