--- a/NewsRoom/Views/_ViewImports.cshtml
+++ b/NewsRoom/Views/_ViewImports.cshtml
@@ -4,4 +4,6 @@
 @using NewsRoom.Models.News
 @using NewsRoom.Models.Home
 @using NewsRoom.Models.Journalists
+@using NewsRoom.Services.News
+@using NewsRoom.Services.Journalists
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
