added _NewsPartial and use function in All and Mine

--- a/NewsRoom/Views/News/Mine.cshtml
+++ b/NewsRoom/Views/News/Mine.cshtml
@@ -1,7 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model IEnumerable<NewsServiceModel>
+
+@{ 
+    ViewBag.Title = "My News";
 }
 
 @if (!Model.Any())
@@ -10,21 +10,4 @@
 
 }
 
-<div class="row">
-    @{
-        foreach (var aNews in Model)
-        {
-            <div class="col-md-4">
-                <div class="card mb-3">
-                    <img src="@aNews.ImageUrl" class="card-img-top" alt="@aNews.Area => @aNews.Title - @aNews.Date (@aNews.Category)">
-                    <div class="card-body text-center">
-                        <h5 class="card-title text-center">@aNews.Area => @aNews.Title (@aNews.Date)</h5>
-                        <a asp-controller="News" asp-action="Details" asp-route-id="@aNews.Id" class="btn btn-primary">View More</a>
-                    </div>
-                </div>
-            </div>
-
-
-        }
-    }
-</div>
+<partial name="_NewsPartial" model="@Model" />
