--- a/NewsRoom/Views/News/All.cshtml
+++ b/NewsRoom/Views/News/All.cshtml
@@ -77,24 +77,7 @@
 }
 
 
-<div class="row">
-    @{
-        foreach (var aNews in Model.News)
-        {
-            <div class="col-md-4">
-                <div class="card mb-3">
-                    <img src="@aNews.ImageUrl" class="card-img-top" alt="@aNews.Area => @aNews.Title - @aNews.Date (@aNews.Category)">
-                    <div class="card-body text-center">
-                        <h5 class="card-title text-center">@aNews.Area => @aNews.Title (@aNews.Date)</h5>
-                        <a asp-controller="News" asp-action="Details" asp-route-id="@aNews.Id" class="btn btn-primary">View More</a>
-                    </div>
-                </div>
-            </div>
-
-
-        }
-    }
-</div>
+<partial name="_NewsPartial" model="@Model.News" />
 
 
 
