--- a/NewsRoom/Views/News/_NewsPartial.cshtml
+++ b/NewsRoom/Views/News/_NewsPartial.cshtml
@@ -8,7 +8,11 @@
                     <img src="@aNews.ImageUrl" class="card-img-top" alt="@aNews.Area => @aNews.Title - @aNews.Date (@aNews.Category)">
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">@aNews.Area => @aNews.Title (@aNews.Date)</h5>
-                        <a asp-controller="News" asp-action="Details" asp-route-id="@aNews.Id" class="btn btn-primary">View More</a>
+                        <a asp-controller="News" asp-action="Details" asp-route-id="@aNews.Id" class="btn btn-primary">View</a>
+                        @if (ViewBag.AllowNewsEdit == true)
+                        {
+                            <span>Edit</span>
+                        }
                     </div>
                 </div>
             </div>
