--- a/NewsRoom/Views/News/_NewsPartial.cshtml
+++ b/NewsRoom/Views/News/_NewsPartial.cshtml
@@ -11,7 +11,8 @@
                         <a asp-controller="News" asp-action="Details" asp-route-id="@aNews.Id" class="btn btn-primary">View</a>
                         @if (ViewBag.AllowNewsEdit == true)
                         {
-                            <span>Edit</span>
+                            <a asp-controller="News" asp-action="Edit" asp-route-id="@aNews.Id" class="btn btn-warning">Edit</a>
+                            <a asp-controller="News" asp-action="Delete" asp-route-id="@aNews.Id" class="btn btn-danger">Delete</a>
                         }
                     </div>
                 </div>
