added _NewsFormPartial view, that can use it in both => Add and Edit views

--- a/NewsRoom/Views/News/Edit.cshtml
+++ b/NewsRoom/Views/News/Edit.cshtml
@@ -1,10 +1,7 @@
 ﻿@model NewsFormModel
 
-@{
-    ViewBag.Title = "Add News";
+@{ 
+    ViewBag.Title = "Edit News";
 }
 
 <partial name="_NewsFormPartial" model="@Model" />
-
-
-
