--- a/NewsRoom/Views/Shared/_LoginPartial.cshtml
+++ b/NewsRoom/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        var userId = User.GetId();
+        var userId = User.Id();
         var userIsJournalist = Journalists.IsJournalist(userId);
 
         @if (userIsJournalist)
