--- a/NewsRoom/Views/News/_NewsPartial.cshtml
+++ b/NewsRoom/Views/News/_NewsPartial.cshtml
@@ -9,7 +9,7 @@
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">@aNews.Area => @aNews.Title (@aNews.Date)</h5>
                         <a asp-controller="News" asp-action="Details" asp-route-id="@aNews.Id" class="btn btn-primary">View</a>
-                        @if (ViewBag.AllowNewsEdit == true)
+                        @if (ViewBag.AllowNewsEdit == true || User.IsAdmin())
                         {
                             <a asp-controller="News" asp-action="Edit" asp-route-id="@aNews.Id" class="btn btn-warning">Edit</a>
                             <a asp-controller="News" asp-action="Delete" asp-route-id="@aNews.Id" class="btn btn-danger">Delete</a>
