--- a/NewsRoom/Views/News/Add.cshtml
+++ b/NewsRoom/Views/News/Add.cshtml
@@ -6,5 +6,9 @@
 
 <partial name="_NewsFormPartial" model="@Model" />
 
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
+
 
 
