--- a/NewsRoom/Views/Shared/_Layout.cshtml
+++ b/NewsRoom/Views/Shared/_Layout.cshtml
@@ -18,9 +18,14 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="Add">Add News</a>
-                        </li>
+                        @if(!User.IsAdmin())
+                        {
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="Add">Add News</a>
+                            </li>
+                        }
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="All">All News</a>
                         </li>
