added new folder Models in Services

--- a/NewsRoom/Views/_ViewImports.cshtml
+++ b/NewsRoom/Views/_ViewImports.cshtml
@@ -4,7 +4,7 @@
 @using NewsRoom.Models.News
 @using NewsRoom.Models.Home
 @using NewsRoom.Models.Journalists
-@using NewsRoom.Services.News
+@using NewsRoom.Services.News.Models
 @using NewsRoom.Services.Journalists
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
