configure Home View with latestNewsService

--- a/NewsRoom/Views/Home/Index.cshtml
+++ b/NewsRoom/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IndexViewModel
+﻿@model List<LatestNewsServiceModel>
 @{
     ViewBag.Title = "Welcome!";
 }
 
 @{
-    var news = Model.News;
+    var news = Model;
 
     var firstNews = news.Any() ? news[0] : null;
 
