--- a/NewsRoom/Areas/Admin/Views/News/All.cshtml
+++ b/NewsRoom/Areas/Admin/Views/News/All.cshtml
@@ -13,23 +13,26 @@
             <th scope="col">Area</th>
             <th scope="col">Title</th>
             <th scope="col">Category</th>
+            <th scope="col">Approved</th>
             <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var aNews in Model)
          {
-           <tr>
-               <td scope="col">@aNews.Id</td>
-               <td scope="col">@aNews.Area</td>
-               <td scope="col">@aNews.Title</td>
-               <td scope="col">@aNews.CategoryName</td>
-               <td scope="col">
-                   <a asp-area="" asp-controller="News" asp-action="Details" asp-route-id="@aNews.Id" asp-route-information="@aNews.ToFriendlyUrl()" class="btn btn-primary float-right ml-3">View</a>
-                   <a  asp-area="" asp-controller="News" asp-action="Edit" asp-route-id="@aNews.Id" class="btn btn-warning float-right ml-3">Edit</a>
-                   <a  asp-area="" asp-controller="News" asp-action="Delete" asp-route-id="@aNews.Id" class="btn btn-danger float-right ml-3">Delete</a>
-               </td>
-           </tr>
+        <tr>
+            <td scope="col">@aNews.Id</td>
+            <td scope="col">@aNews.Area</td>
+            <td scope="col">@aNews.Title</td>
+            <td scope="col">@aNews.CategoryName</td>
+            <td scope="col">@(aNews.IsPublic ? "Yes" : "No")</td>
+            <td scope="col">
+                <a asp-area="" asp-controller="News" asp-action="Details" asp-route-id="@aNews.Id" asp-route-information="@aNews.ToFriendlyUrl()" class="btn btn-primary float-right ml-3">View</a>
+                <a asp-area="" asp-controller="News" asp-action="Edit" asp-route-id="@aNews.Id" class="btn btn-warning float-right ml-3">Edit</a>
+                <a asp-area="Admin" asp-controller="News" asp-action="ChangeVisibility" asp-route-id="@aNews.Id" class="btn btn-info float-right ml-3">@(aNews.IsPublic ? "Hide" : "Show")</a>
+                <a asp-area="" asp-controller="News" asp-action="Delete" asp-route-id="@aNews.Id" class="btn btn-danger float-right ml-3">Delete</a>
+            </td>
+        </tr>
          }
     </tbody>
 </table>
