added column Approved in Administration  to working

--- a/NewsRoom/Areas/Admin/Views/_ViewImports.cshtml
+++ b/NewsRoom/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using NewsRoom
-@using NewsRoom.Infrastructure
+@using NewsRoom.Infrastructure.Extensions
 @using NewsRoom.Models
 @using NewsRoom.Models.News
 @using NewsRoom.Models.Journalists
