change string in Administration Area Title

--- a/NewsRoom/Areas/Admin/Views/News/All.cshtml
+++ b/NewsRoom/Areas/Admin/Views/News/All.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<NewsServiceModel>
 
 @{
-    ViewBag.Title = "Become Journalist";
+    ViewBag.Title = "News Administration";
 }
 
 <h1>All News</h1>
