added description field to view each news in All News

--- a/NewsRoom/Views/News/Details.cshtml
+++ b/NewsRoom/Views/News/Details.cshtml
@@ -2,5 +2,7 @@
 
 <div class="col-md-6 offset-3">
     <h2>@Model.Area => @Model.Title</h2>
+    <h2>=> =></h2>
+    <h2>@Model.Description</h2>
 
 </div>
