added div class for a current time in Home page and also added resources files

--- a/NewsRoom/Views/Home/Index.cshtml
+++ b/NewsRoom/Views/Home/Index.cshtml
@@ -1,7 +1,12 @@
 ﻿@model List<LatestNewsServiceModel>
 @{
-    ViewBag.Title = "Welcome!";
+    ViewBag.Title = "Home Page";
 }
+
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Current time is: @DateTime.UtcNow</p>
+</div>
 
 @{
     var news = Model;
