added button for change languages but without functionality

--- a/NewsRoom/Views/Shared/_LoginPartial.cshtml
+++ b/NewsRoom/Views/Shared/_LoginPartial.cshtml
@@ -53,5 +53,8 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
         </li>
+        <li class="nav-item">
+            <language-nav></language-nav>
+        </li>
     }
 </ul>
