--- a/NewsRoom/Views/Home/Index.cshtml
+++ b/NewsRoom/Views/Home/Index.cshtml
@@ -83,7 +83,7 @@
 
 <div class="row">
     <div class="col-12 text-center">
-        <button class="btn btn-primary" id="statistics-button">Show Statistics</button>
+        <button class="btn btn-primary" id="statistics-button">@localizer["StatisticsButton"]</button>
     </div>
 </div>
 
