added successfully german index resource file

--- a/NewsRoom/Views/Home/Index.cshtml
+++ b/NewsRoom/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
         <p class="lead">There are no News in the system currently available so why don't you just add one?</p>
         <hr class="my-4">
         <p class="lead">
-            <a asp-controller="News" asp-action="Add" class="btn btn-primary btn-lg" role="button">Add News</a>
+            <a asp-controller="News" asp-action="Add" class="btn btn-primary btn-lg" role="button">@localizer["AddNews"]</a>
         </p>
     </div>
 
