--- a/NewsRoom/Views/Shared/Error.cshtml
+++ b/NewsRoom/Views/Shared/Error.cshtml
@@ -3,8 +3,10 @@
     ViewBag.Title = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">Oops, Error.</h1>
+<p class="text-danger">An error occurred while processing your request.</p>
+
+<strong>Status code:</strong> <code>@Model.StatusCode</code>
 
 @if (Model.ShowRequestId)
 {
