added head part in Login view

--- a/NewsRoom/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NewsRoom/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,7 +6,28 @@
     Layout = null;
 }
 
+<head>
 
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="NewsRoom" />
+    <title>@ViewData["Title"]</title>
+
+    <!-- Google Font: Source Sans Pro -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+    <link rel='icon' href="/favicon.ico" type="image/x-icon" />
+    <!-- Font Awesome Icons -->
+
+    <link rel="stylesheet" href="/plugins/fontawesome-free/css/all.min.css" />
+    <!-- Theme style -->
+    <link rel="stylesheet" href="/css/adminlte.min.css" />
+    <!-- overlayScrollbars -->
+    <link rel="stylesheet" href="/plugins/overlayScrollbars/css/OverlayScrollbars.min.css" />
+    <link rel="stylesheet" href="/plugins/toastr/toastr.min.js" />
+
+    <link rel="stylesheet" href="/css/site.css" asp-append-version="true" />
+
+</head>
 
 <div class="row">
     <div class="col-md-4 offset-md-4">
