--- a/NewsRoom/Areas/Identity/Pages/Account/Login.cshtml
+++ b/NewsRoom/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-4 offset-md-4">
         <section>
-            <h2 class="text-center">@ViewData["Title"]</h2>
+            <h2 class="text-center">Sign in here</h2>
 
             <form id="account" method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
