--- a/NewsRoom/Views/Shared/_Layout.cshtml
+++ b/NewsRoom/Views/Shared/_Layout.cshtml
@@ -42,8 +42,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; @DateTime.UtcNow.Year - NewsRoom
+        <div class="copyright">
+            <strong>Copyright &copy; 2022 - @DateTime.UtcNow.Year NewsRoom.</strong> All rights reserved.
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
