--- a/NewsRoom/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/NewsRoom/Areas/Identity/Pages/Account/Logout.cshtml
@@ -18,7 +18,7 @@
         }
         else
         {
-            <p>You have successfully logged of the application.</p>
+            <p>You have successfully logged out of the application.</p>
         }
     }
 
