--- a/NewsRoom/Views/Shared/_LoginPartial.cshtml
+++ b/NewsRoom/Views/Shared/_LoginPartial.cshtml
@@ -58,6 +58,9 @@
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/About">About</a>
+        </li>
+        <li class="nav-item">
             <language-nav redirect-to-url="@(Url.RouteUrl(routeData))" cookie-handler-url="@Url.Action("SetCultureCookie", "Home", new { area="", cltr="{0}", returnUrl="{1}" })"></language-nav>
         </li>
     }
