--- a/NewsRoom/Views/About/Index.cshtml
+++ b/NewsRoom/Views/About/Index.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer localizer
 @{
-    ViewData["Title"] = localizer["PageTitle"];
+    ViewData["Title"] = localizer["Home"];
 }
 
 <div class="container">
