added in ViewImports missing service

--- a/NewsRoom/Views/_ViewImports.cshtml
+++ b/NewsRoom/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using NewsRoom.Models.News
 @using NewsRoom.Models.Journalists
 @using NewsRoom.Services.News.Models
+@using NewsRoom.Services.About;
 @using NewsRoom.Services.Journalists
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
